<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Icms</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="our_office_locations">Our Office Locations:</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="passport_sevices">Passport Sevices:</string>
    <string name="new_passport">New Passport</string>
    <string name="renew_passport">Expired Passport</string>
    <string name="passport_page_run_out">Passport page run out</string>
    <string name="damaged_passport">Damaged Passport</string>
    <string name="lost_passport">Lost Passport</string>
    <string name="change_of_passport_data">Change of Passport Data</string>
    <string name="valid_passport">Valid Passport</string>
    <string name="urgent_passport">Urgent Passport</string>
    <string name="renew_passport_text">Renew Passport:</string>
    <string name="lost_passport_text">Lost Passport:</string>
    <string name="important_informations_required_to_process_your_services">Important informations required to Process your services:</string>
    <string name="requirements_to_passport">Requirements to Passport</string>
    <string name="requirements_to_visa">Requirements to visa</string>
    <string name="service_fees">Service fees</string>
    <string name="requirements_to_passport_services">Requirements to Passport services:</string>
    <string name="our_services_fees">Our Services Fees:</string>
    <string name="requirements_to_visa_services">Requirements to proceed your Visa Services:</string>
    <string name="visa_sevices">Visa Sevices:</string>
    <string name="tourist_visa">Tourist Visa(VT)</string>
    <string name="tourist_visa_online">Tourist Visa (Online)</string>
    <string name="tourist_visa_on_arrival">Tourist Visa (On Arrival</string>
    <string name="business_visa">Business Visa(BV)</string>
    <string name="confrence_visa" tools:ignore="DuplicateDefinition">Confrence Visa(CV)</string>
    <string name="investment_visa">Investment Visa(IV)</string>
    <string name="foreign_business_firm_employment_visa">Foreign Business Firm Employment Visa(FV)</string>
    <string name="journalist_visa">Journalist Visa(JV)</string>
    <string name="ethiopian_private_business_firm_work_visa">Ethiopian Private Business Firm Work Visa(PE)</string>
    <string name="international_organization_work_visa">International Organization Work Visa(RI)</string>
    <string name="government_institutions_short_work_visa">Government Institutions Short Work Visa(GIV)</string>
    <string name="ngo_work_visa">NGO work Visa(NGO)</string>
    <string name="ethiopian_government_employment_visa">Ethiopian Government Employment Visa(GV)</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="fullname">Full Name</string>
    <string name="please_fill_legitimate_informations">Please fill legitimate informations:</string>
    <string name="new_passport_start_your_application_here">New Passport: Start your application here:</string>
    <string name="expired_passport_start_your_application_here">Expired Passport: Start your application here:</string>
    <string name="pagerunout_passport_start_your_application_here">Passport Page run out: Start your application here:</string>
    <string name="damaged_passport_start_your_application_here">Damaged Passport: Start your application here:</string>
    <string name="lost_passport_start_your_application_here">Lost Passport: Start your application here:</string>
    <string name="changeofdata_passport_start_your_application_here">Change of Passport Data: Start your application here:</string>
    <string name="valid_passport_start_your_application_here">Valid Passport: Start your application here:</string>
    <string name="urgent_passport_start_your_application_here">Urgent Passport: Start your application here:</string>
    <string name="your_feedback_will_help_us_feel_free_to_give_us_any_comment">Your feedback will help us. Feel free to give us any comment:</string>
    <string name="give_us_feedback">Give Us feedback:</string>
    <string name="home">Home</string>
    <string name="track_my_service">Track my service</string>
    <string name="faq">FAQ</string>
    <string name="profile_group">profile</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="feedback">Feedback</string>
    <string name="about_us">About Us</string>
    <string name="communication">communication</string>
    <string name="notification">Notification</string>
    <string name="about_us_tv">About Us:</string>
    <string name="icms">ICMS</string>
    <string name="about_us_text">This App is Build by Computer Science Graduate Students. This App is build for only final year industrial project purpose but all informations and requirements listed are legitimate. You can also Apply yourself directly through Government portal for the same.</string>
    <string name="profile_imageview">profile_imageview</string>
    <string name="username">Username</string>
    <string name="wellcome_to_icms">Wellcome to ICMS</string>
    <string name="passport_imageview">passport_imageview</string>
    <string name="passport_services">Passport Services</string>
    <string name="visa_imageview">visa_imageview</string>
    <string name="visa_services">Visa Services</string>
    <string name="getlocation_imageview">getlocation_imageview</string>
    <string name="get_location">Get Location</string>
    <string name="getinformation_imageview">getinformation_imageview</string>
    <string name="get_information">Get Information</string>
    <string name="My_detail">My Detail</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="check_your_service_status">Check your service status:</string>
    <string name="check_e_visa_status">Check e-Visa status:</string>
    <string name="passport_number">Passport Number</string>
    <string name="reference_number_id">Reference Number/ID</string>
    <string name="check_passport_status">Check Passport status:</string>
    <string name="setting">Setting</string>
    <string name="change_username">Change Username</string>
    <string name="change_email">Change Email </string>
    <string name="change_password">Change Password</string>
    <string name="change_phone">Change Phone</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="visa_sevices_tv">Visa Sevices</string>
    <string name="frequently_asked_questions">Frequently Asked Questions:</string>
    <string name="info_title">Info_Title</string>
    <string name="info_description">Info_description</string>
    <string name="passport_requirements_tv">Requirements to proceed your passport process:</string>
    <string name="requirement_description_tv">Requirement_description</string>
    <string name="requirement_title_tv">Requirement_title</string>
    <string name="passport_requirement_title_one">
      <br>  <b>Procedure</b></br>
    </string>
    <string name="passport_requirement_description_one" formatted="true">
        <br>Ethiopia is currently issuing electronic passports that require fingerprints.
            Therefore,all applicants must be made in-person at the
            Main Department for Immigration and Nationality Affairs offices or Embassy of Ethiopia if the applicant is abroad.</br>
    </string>
    <string name="passport_requirement_title_two">
        <br><b>Application for a new Ethiopian passport in Ethiopia</b></br>
    </string>
    <string name="passport_requirement_description_two" formatted="true">
        <br>- Application form is provided which should duly fill before submission.\n</br>
        <br>- The following documents are to be attached together with the application document:\n</br>
        <br> 1. Recent passport-sized colour photo.\n</br>
        <br> 2. A clear scanned or picture of an identity card.\n</br>
        <br> 3. The correct fee must be enclosed with your application.Please make sure that the fee is exact amount in required currency.\n</br>
        <br>- One should then proceed to have their fingerprint impression taken in the immigration office with your original documents
            when you get notification message.\n</br>
        <br>- The processing time at is 1-3 days depending on your inquiry
            and one is required to collect the passport through post office or in person.\n</br>
        <br>- The day of collection will be communicated by notification message.\n</br>
    </string>
    <string name="passport_requirement_title_three">
        <br><b>Application for a new Ethiopian passport for a new Child Born Abroad</b></br>
    </string>
    <string name="passport_requirement_description_three" formatted="true">
        <br>A child born outside of Ethiopia to an Ethiopian citizen parent(s) is eligible for Ethiopian citizenship.\n</br>
        <br>- The parent must answer all the questions outlined in the application form and provide their fingerprints.\n </br>
        <br>- Applicants under the age of 14 are exempted from providing fingerprints.\n</br>
        <br>The following documents are required to be attached when together with the application:\n</br>
        <br>1. The completed Ethiopian passport application form.\n</br>
        <br>2. Clear recent passport-sized colour photo.\n </br>
        <br>3. Clear scanned or picture of documents certifying the parent(s) Ethiopian Citizenship.\n</br>
        <br>4. Clear scanned or picture of the child\'s birth certificate.\n </br>
        <br>5. The correct fee must be enclosed with your application.\n</br>
        <br>- As Ethiopian passports are issued in Ethiopia.It may take up to two months to process the application.
            We will notify you by notification message when the passport has been issued and ready to collection.\n </br>
        <br>- Applicants are required to collect their passport in person at consular section or through post office.\n</br>
    </string>
    <string name="passport_requirement_title_eleven">
        <br><b>Application for renewal Ethiopian passport in Ethiopia</b></br>
    </string>
    <string name="copyright">Copyright \u00a9 2020 ICMS</string>
    <string name="GV_info_tv">
        - Please note that Business Visa is not issued for applicants whose age is under 18.\n
        - GV visa issued to foreign nationals to be employed by different Ethiopian government institutions/ministries.</string>
</resources>