<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_track_my_service"
            android:icon="@drawable/ic_track_service"
            android:title="@string/track_my_service" />
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_faq"
            android:title="@string/faq" />
    </group>

    <item android:title="">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_profile"
                    android:title="@string/profile" />
                <item
                    android:id="@+id/nav_setting"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/setting" />

            </group>
        </menu>
    </item>

    <item android:title="">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_feedback"
                    android:icon="@drawable/ic_feedback"
                    android:title="@string/feedback" />
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_about"
                    android:title="@string/about_us" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/logout" />

            </group>
        </menu>
    </item>


</menu>