<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primarytheme1"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TextView
                android:id="@+id/newpassport_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
            android:padding="10dp"
            android:text="@string/give_us_feedback"
            android:textColor="@android:color/white"
            android:textSize="35sp"
            app:fontFamily="@font/baloo" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="25dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/your_feedback_will_help_us_feel_free_to_give_us_any_comment"
            android:textColor="@color/black"
            android:textSize="25sp"
            tools:targetApi="lollipop" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="10dp"
            android:paddingHorizontal="20dp"
            app:boxStrokeColor="@color/primarytheme1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/feedback_fullname_ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:drawableStart="@drawable/ic_person"
                android:drawableLeft="@drawable/ic_person"
                android:drawablePadding="15dp"
                android:drawableTint="@color/black"
                android:hint="@string/fullname"
                android:inputType="textPersonName"
                android:keyboardNavigationCluster="true"
                android:maxLength="20"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@color/black"
                android:textSize="20sp"
                tools:targetApi="o" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="10dp"
            android:paddingHorizontal="20dp"
            app:boxStrokeColor="@color/primarytheme1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/feedback_email_ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:drawableStart="@drawable/ic_email"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="15dp"
                android:drawableTint="@color/black"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:keyboardNavigationCluster="true"
                android:maxLength="30"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@color/black"
                android:textSize="20sp"
                tools:targetApi="o" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="10dp"
            android:paddingHorizontal="20dp"
            app:boxStrokeColor="@color/primarytheme1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/feedback_phone_ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:drawableStart="@drawable/ic_phone"
                android:drawableLeft="@drawable/ic_phone"
                android:drawablePadding="15dp"
                android:drawableTint="@color/black"
                android:hint="@string/phone"
                android:inputType="phone"
                android:keyboardNavigationCluster="true"
                android:maxLength="10"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@color/black"
                android:textSize="20sp"
                tools:targetApi="o" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="10dp"
            android:paddingHorizontal="20dp"
            app:boxStrokeColor="@color/primarytheme1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/feedback_feedback_ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:drawableStart="@drawable/ic_comment"
                android:drawableLeft="@drawable/ic_phone"
                android:drawablePadding="15dp"
                android:drawableTint="@color/black"
                android:hint="@string/feedback"
                android:inputType="text"
                android:keyboardNavigationCluster="true"
                android:maxLength="200"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@color/black"
                android:textSize="20sp"
                tools:targetApi="o" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/feedback_submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:backgroundTint="@color/primarytheme1"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@color/white"
            android:textSize="25sp"
            tools:targetApi="lollipop" />
    </LinearLayout>
    </LinearLayout>
</ScrollView>