<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primarytheme1"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="20dp">

            <TextView
                android:id="@+id/newpassport_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:text="GV Visa: Start your application here:"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                app:fontFamily="@font/roboto_regular" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:background="@drawable/bg"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="25dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/please_fill_legitimate_informations"
                android:textColor="@color/black"
                android:textSize="25sp"
                tools:targetApi="lollipop" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Select CitizenShip"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/GV_citizenship_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/black"
        android:hint="Please Enter your Citizenship"
        android:textSize="20sp" />
</LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/GV_next_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@color/primarytheme1"
                android:drawableRight="@drawable/ic_baseline_navigate_next_24"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/next"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                android:textColor="@color/white"
                android:textSize="25sp"
                tools:targetApi="lollipop" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_rectangle"
                android:fontFamily="@font/roboto_regular"
                android:padding="15dp"
                android:text="@string/GV_info_tv"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>